Worked on query result panel and added result table
