# src/server/services/database/types/plugin.types.ts
@@ -40,6 +40,7 @@ export interface QueryResult {
     rows: any[];
     rowCount: number | null;
     fields: any;
+    executionTimeMs: number;
   };
 }
 
